workspace/static/less/sc/ProjectViewer.less
.sc-ProjectViewer-button {
    .dropdown-menu li {
        color: black;
    }
}

.sc-ProjectViewer-modal {
    a, a:hover, a:active, a:visited {
        color: #08c;
    }

    .modal-header .nav {
        margin-bottom: 0;
    }

    .sc-ProjectViewer-usernameInput {
        width: 170px;
    }
}

.sc-ProjectViewer-titleButton {

}

.sc-ProjectViewer-projectLabel {
    display: inline-block;
    color: #666666;
}

.sc-ProjectViewer-projectButtonTitle {
    display: inline-block;
    margin-left: 3px;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 100px;
}

